2014-07-31  Brent Fulgham  <bfulgham@apple.com>

        Unreviewed typo correction.
        https://bugs.webkit.org/show_bug.cgi?id=135482

        Rename '_fullScreenIsEnabled' -> '_fullScreenEnabled'

        * UIProcess/API/Cocoa/WKPreferences.mm:
        (-[WKPreferences _fullScreenEnabled]): Added
        (-[WKPreferences _fullScreenIsEnabled]): Deleted.
        * UIProcess/API/Cocoa/WKPreferencesPrivate.h:

2014-07-31  Brent Fulgham  <bfulgham@apple.com>

        MiniBrowser Should Support Fullscreen Videos in WebKit2 Mode
        https://bugs.webkit.org/show_bug.cgi?id=135482

        Reviewed by Simon Fraser.
        
        Add accessors for the missing Fullscreen API so that MiniBrowser
        can use them.

        * UIProcess/API/Cocoa/WKPreferences.mm:
        (-[WKPreferences _fullScreenIsEnabled]): Added.
        (-[WKPreferences _setFullScreenEnabled:]): Added.
        * UIProcess/API/Cocoa/WKPreferencesPrivate.h: Add accessor for
        Fullscreen mode.

2014-07-31  Beth Dakin  <bdakin@apple.com>

        Hit-testing broken in WebKit 1 views with AppKit's contentInsets
        https://bugs.webkit.org/show_bug.cgi?id=135434
        -and corresponding-
        <rdar://problem/17850323>

        Reviewed by Benjamin Poulain.

        Re-named functions.
        * WebProcess/Plugins/PDF/PDFPlugin.mm:
        (WebKit::PDFPlugin::convertFromScrollbarToContainingView):
        (WebKit::PDFPlugin::convertFromContainingViewToScrollbar):

2014-07-31  Oliver Hunt  <oliver@apple.com>

        Various SSO services need the networking process to be able to spoof its bundle id
        https://bugs.webkit.org/show_bug.cgi?id=135468
        <rdar://problem/17864139>

        Reviewed by Alexey Proskuryakov.

        Just add the entitlement required to allow the sandbox to let this happen.

        * Configurations/Network-iOS.entitlements:

2014-07-31  Przemyslaw Kuczynski  <p.kuczynski@samsung.com>

        Fix uninitialized scalar variable